--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,7 +1,39 @@
-<span>Click me!</span>
+<span class="base-button fancy-button">Click me!</span>
+
+<span class="base-button scary-button">Be careful!</span>
 
 <style>
-
   /* Write your CSS here to make the span look like a button. */
 
+  .base-button{
+    color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+  }
+  .fancy-button {
+    background-color: blue;
+  }
+
+  .fancy-button:hover {
+    background-color: darkblue;
+  }
+
+  .fancy-button:active {
+    background-color: red;
+  }
+
+    .scary-button {
+    background-color: red;
+  }
+
+  .scary-button:hover {
+    background-color: darkred;
+  }
+
+  .scary-button:active {
+    background-color: bluered;
+  }
 </style>
