--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,3 +1,16 @@
 <span class="base-button fancy-button">Click me!</span>
 
 <span class="base-button scary-button">Be careful!</span>
+
+<a class="btn btn-primary">Primary</a>
+<a class="btn btn-secondary">Secondary</a>
+<a class="btn btn-success">Success</a>
+<a class="btn btn-danger">Danger</a>
+<a class="btn btn-warning">Warning</a>
+<a class="btn btn-info">Info</a>
+<a class="btn btn-outline-primary">Primary (unobtrusive)</a>
+<a class="btn btn-outline-secondary">Secondary (unobtrusive)</a>
+<a class="btn btn-outline-success">Success (unobtrusive)</a>
+<a class="btn btn-outline-danger">Danger (unobtrusive)</a>
+<a class="btn btn-outline-warning">Warning (unobtrusive)</a>
+<a class="btn btn-outline-info">Info (unobtrusive)</a>
