--- a/app/views/levels/utility_classes.html.erb
+++ b/app/views/levels/utility_classes.html.erb
@@ -1,6 +1,15 @@
 
 <!-- Add utility classes and/or elements as needed to achieve the target appearance. -->
 
+<!-- <div style="display: flex; justify-content: space-between"> -->
+
+
+<div class="d-flex justify-content-between">
+  <div class="bg-primary">First</div>
+  <div class="bg-success">Second</div>
+  <div class="bg-danger">Third</div>
+</div>
+
 <div>
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ad debitis iste minima molestiae repellat magni? Voluptas, odit voluptate quasi esse ea iure quibusdam error at architecto veritatis, beatae nihil?
 </div>
