Matched utility classes to target

--- a/app/views/levels/utility_classes.html.erb
+++ b/app/views/levels/utility_classes.html.erb
@@ -4,12 +4,23 @@
 <!-- <div style="display: flex; justify-content: space-between"> -->
 
 
-<div class="d-flex justify-content-between">
-  <div class="bg-primary">First</div>
-  <div class="bg-success">Second</div>
-  <div class="bg-danger">Third</div>
+<div class="d-flex justify-content-around">
+  <div class="bg-primary text-white p-3">First</div>
+  <div class="bg-success text-white p-3">Second</div>
+  <div class="bg-danger text-white p-3">Third</div>
 </div>
 
-<div>
+<hr>
+
+<div class="d-flex justify-content-between">
+  <div>Inbox</div>
+  <div>
+    <span class="badge rounded-pill text-bg-danger">43</span>
+  </div>
+</div>
+
+<hr>
+
+<div class="w-25 shadow p-4 border-start border-info">
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ad debitis iste minima molestiae repellat magni? Voluptas, odit voluptate quasi esse ea iure quibusdam error at architecto veritatis, beatae nihil?
 </div>
